--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.1",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "jsencrypt": "^3.0.0-rc.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.12.0",
@@ -21,6 +22,7 @@
     "tui-editor": "^1.4.10"
   },
   "scripts": {
+    "serve": "set PORT=8080 HOST=192.168.0.105 && react-app-rewired start",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
